<resources>
    <string name="app_name">Noticias</string>
    <string name="opcion1">Coronavirus</string>
    <string name="opcion2">Nacional</string>
    <string name="opcion3">Internacional</string>
    <string name="opcion4">Estados</string>
    <string name="opcion5">Entretenimiento</string>
    <string name="opcion6">Red</string>
    <string name="opcion7">Varios</string>
    <string name="opcion8">Reportajes especiales</string>
    <string name="opcion9">Noticias en un minuto</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="categorias">Categorías</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homefrag">homefrag</string>
    <string name="veryTitle">JMNews</string>
    <string name="Bienvenida">Bienvenido a JMNews</string>
    <string name="Descripcion1">Este proyecto consiste en la realización una aplicación semejante a un portal de noticias conocido en la cual se deben observar categorías con un mínimo de 10 categorías y te permita visualizar noticias en video.</string>
    <string name="Toxqui">Jesús Toxqui Ortega</string>
    <string name="Noe">Noé Rivera Lugo</string>
    <string name="Cuaya">Miguel Ángel Cuaya T.</string>
    <string name="casoscovid">Casos por Covid en México</string>
    <string name="Descripcion2">Los síntomas más habituales son los siguientes: Fiebre, Tos seca, Cansancio  Otros síntomas menos comunes son los siguientes: Molestias y dolores, Dolor de garganta, Diarrea, Conjuntivitis, Dolor de cabeza Pérdida del sentido del olfato o del gusto, Erupciones cutáneas o pérdida del color en los dedos de las manos o de los pies  Los síntomas graves son los siguientes: Dificultad para respirar o sensación de falta de aire, Dolor o presión en el pecho Incapacidad para hablar o moverse.  Si presentas síntomas graves, busca atención médica inmediata. Sin embargo, siempre debes llamar a tu doctor o centro de atención sanitaria antes de presentarte en el lugar en cuestión. Lo recomendable es que las personas que sufran síntomas leves y tengan un buen estado de salud general se confinen en casa. De media, las personas que se contagian empiezan a presentar síntomas en un plazo de 5 a 6 días desde que se infectan, pero pueden tardar hasta 14.</string>
    <string name="fecha">25 de Julio de 2021</string>
    <string name="cantidadcasos">8,535 nuevos casos</string>
    <string name="sintomas">Síntomas</string>
    <string name="medallas">Tablero de medallas</string>
    <string name="subtitulotokyo">Acerca de</string>
    <string name="Descripcion3">Los Juegos Olímpicos de Tokio 2020, oficialmente conocidos como los Juegos de la XXXII Olimpiada, tienen lugar del 23 de julio al 8 de agosto de 2021 en Tokio, Japón.1​2​ El Comité Olímpico Internacional eligió a Tokio, una de las ciudades que se habían postulado para celebrarlos, el 7 de septiembre de 2013, durante la 125.ª Sesión del Comité Olímpico Internacional que tuvo lugar en Buenos Aires</string>
    <string name="Apertura">Apertura</string>
    <string name="fechaApertura">23 de Julio de 2021</string>
    <string name="Clausura">Clausura</string>
    <string name="fechaClausura">8 de agosto de 2021</string>
    <string name="clima">Clima</string>
</resources>