<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/climatitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/medallas"
                    android:textColor="@color/Letras"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/desccasos"
                    android:layout_width="354dp"
                    android:layout_height="300dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="21dp"
                    android:layout_marginRight="21dp"
                    android:text="@string/Descripcion3"
                    android:textColor="#424242"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fechacasos" />

                <TextView
                    android:id="@+id/fechacasos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="258dp"
                    android:layout_marginRight="258dp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/subtitulotokyo"
                    android:textColor="@color/Letras"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />

                <TextView
                    android:id="@+id/nuevoscasos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="268dp"
                    android:layout_marginRight="268dp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/Clausura"
                    android:textColor="@color/Letras"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/extra1" />

                <TextView
                    android:id="@+id/sintomascasos"
                    android:layout_width="113dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="262dp"
                    android:layout_marginRight="262dp"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/Apertura"
                    android:textColor="@color/Letras"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="349dp"
                    android:layout_height="263dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/tablero_medallas"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.58"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/climatitulo" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="243dp"
                    android:layout_height="187dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/tokyo_2020"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/desccasos" />

                <TextView
                    android:id="@+id/extra1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="198dp"
                    android:layout_marginRight="198dp"
                    android:text="@string/fechaApertura"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sintomascasos" />

                <TextView
                    android:id="@+id/extra2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="191dp"
                    android:layout_marginRight="191dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/fechaClausura"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nuevoscasos" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>